--- a/style.css
+++ b/style.css
@@ -1,236 +1,347 @@
-@media screen and (max-width:768px) {
-body{
- font-family: 'Roboto', sans-serif;
-}
-.logo img{
-    width: 150px;
-    
-}
-.logo{
 
+body
+{
+	font-family: 'Roboto', sans-serif;
 }
 
-.barre-recherche{
-    background-color: #EAEAEA; 
-    height: 70px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-  
-   
-} 
-.icone-map{
-  position: absolute;
-    margin-left: 45%;
-    margin-bottom: 8px;
+.logo img
+{
+	width: 150px;
+	margin-bottom: 10px;
 }
 
+.barre-recherche
+{
+	background-color: #EAEAEA;
+	height: 70px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+}
 
-input{
-    background: #EAEAEA;
-    border:none;
-    font-size:16px;
-    margin-left: 50%;
-    margin-top: 10px;
+.icone-map
+{
+	position: absolute;
+	margin-left: 35%;
+}
 
+input
+{
+	background: #EAEAEA;
+	border:none;
+	font-size:16px;
+	margin-left:40%;
 }
-.fond-gris-header{
-    height: 300px;
-    background-color: #F6F6F6;
-    margin: 0;
-    width: 100%;
-    margin-top: -23px;
-    
-}
-.btn{
-   border-radius: 30px;
-    width: 250px;
-    height: 50px;
-    color: white;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-size: 15px;
-   
-    background: linear-gradient(0deg, #9356DC,#FF79DA );
-}
-.btn p{
 
-    font-weight:400;
-    
+h1
+{
+	margin-top: 30px;
 }
-.onglet-gris{
-    background-color: #F5EDFF;
-    display: flex;
-    padding: 15px;
-    justify-content: center;
-    width:85%;
-    border-radius: 25px;
-    margin-top: 20px;
-    box-shadow: 19px 17px 34px -36px black;
-}
-.icone-menu{
-    margin-top: 25px;
-    margin-right: 25px;
-  }
-    section{
-        display: flex;
-        flex-direction: column;
-        margin-top:80px;
 
-        
-    }
-    .icone-color{
-        color:#9356DC;
-    }
-    .onglet-carré{
-        border-radius: 25px;
-        width: 85%;
-        background-color:rgb(250,250,250) ;
-  border-radius: 20px;
-  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-  margin-bottom: 25px;
-    }
-    article img{
-        object-fit: cover;
-        overflow: hidden;
-        width: 100%;
-        height: 180px;
-        border-radius: 20px 20px 0px 0px;
-        
-    }
-   .contenu{
-       display:flex;
-       justify-content: space-around;
-   }
-    .nouveau {
-        position:absolute;
-        margin-left:56% ;
-        background: #99E2D0;
-        padding: 10px;
-        border-radius: 4px;
-        color: #4CB49B;
-        width: 80px;
-        z-index: 2;
-        margin-right: 80px;
-        font-weight: 530;
-    
-    }
-    .description{
-        display: flex;
-        justify-content: space-around
-    }
-    
-    
-   .fond-gris{
-       background-color: #F6F6F6;
-       width: 85%;
-   }
-
-  .fond-footer{
-      
-      background-color: #353535;
-      color:white;
-      font-family:'Roboto', sans-serif; 
-      margin-top:-20px;
-    
-      
-  }
-  footer h4{
-  font-family: 'Shrikhand', cursive;
-  font-size: 16px;
-  font-weight: 100;
-  margin-left:8%;
-  padding-top: 5%;
-      
-  }
-    footer li, a{
-        text-decoration: none;
-        list-style: none;
-        color: white;
-         padding:4px;
-    }
-    footer ul{
-      padding-bottom:20px;
-    }
-
-    /* PAGES MENU*/
-   
-    .img-header img{
-        height: 400px;
-        width: 100%;
-    }
-    .fond-gris-menu{
-        background-color: #F6F6F6;
-        border-radius: 70px 70px 0px 0px;
-        margin-top: -100px;
-        position: relative;
-        z-index: 2;
-    }
-    .titre-menu{
-        display: flex;
-    
-    }
-    
-    .titre-menu h1{
-        font-size: 28px;
-        margin-top: 60px;
-        font-family: 'Shrikhand', cursive;
-        margin-left: 5%;
-        
-        
-    }
-    
-    .heart-grand{
-        position: absolute;
-        z-index: 2;
-        margin-left: 90%;
-        margin-top:80px;
-        transform: scale(1.8,2);
-       
-    }
-    .fond-blanc-plats{
-        background-color: white;
-        border-radius: 20px;
-        width: 87%;
-        margin-top: 20px;
-        box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-        padding: 10px;
-        margin-top: 25px;
-    }  
-    
-  
-  .description-menu{
-      display: flex;
-      margin-left: 4%;
-      
-  }
-  .text{
-      flex-direction: column;
-      line-height: 6px;
-      
-  }
-  .prix{
-   position:absolute;
-      margin-left:77%;
-      margin-top: 20px;
-  }
-    
- .font-color-size{
-     color: grey;
-     font-weight: 400;
-     font-size: 20px;
-     text-transform:uppercase ;
-     margin-left: 5%;
-     margin-top: -50px;
- } 
- .border-bottom{
-    width: 50px;
-border:2px solid #99E2D0;
-     margin-left: 5%;
-     margin-top: -10px; }  
+.fond-gris-header
+{
+	background-color: #F6F6F6;
+	margin: 0;
+	width: 100%;
+	margin-top: -1px;
+	text-align: center;
 }
-.flex-center{
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
+
+.btn
+{
+	border-radius: 30px;
+	width: 220px;
+	height: 50px;
+	color: white;
+	margin-top: 30px;
+	margin-bottom: 50px;
+	font-size: 15px;
+	background: linear-gradient(170deg,#FF79DA, #9356DC );
 }
+
+.btn p
+{
+	font-weight:530;
+}
+
+.onglet-gris
+{
+	background-color: #F5EDFF;
+	display: flex;
+	padding: 15px;
+	width:80%;
+	border-radius: 25px;
+	margin-top: 20px;
+	box-shadow: 19px 17px 34px -36px black;
+}
+
+.icone-menu
+{
+	margin-top: 18px;
+	margin-right: 25px;
+	color: #808080;
+}
+
+p
+{
+	font-weight: 500;
+}
+
+section
+{
+	display: flex;
+	flex-direction: column;
+	margin-top:30px;
+}
+
+.icone-color
+{
+	color:#9356DC;
+}
+
+h2
+{
+	margin-left: 5%;
+}
+
+.onglet-carré
+{
+	border-radius: 25px;
+	width: 85%;
+	background-color:rgb(250,250,250) ;
+	border-radius: 20px;
+	box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+	margin-bottom: 25px;
+}
+
+article img
+{
+	object-fit: cover;
+	overflow: hidden;
+	width: 100%;
+	height: 180px;
+	border-radius: 20px 20px 0px 0px;
+}
+
+.contenu
+{
+	display:flex;
+	justify-content: space-around;
+}
+
+.nouveau
+{
+	position:absolute;
+	margin-left:60%;
+	background: #99E2D0;
+	padding: 12px;
+	border-radius: 4px;
+	color: #4CB49B;
+	width: 70px;
+	z-index: 2;
+	margin-right: 80px;
+	font-weight: 530;
+}
+
+.description
+{
+	display: flex;
+	flex-direction: column;
+	margin-left: 5%;
+	line-height:1px;
+}
+
+.description p
+{
+	margin-top: 5px;
+	font-weight: 400;
+	color:#353535;
+}
+
+.description h3
+{
+	font-size: 18px;
+}
+
+.fa-heart
+{
+	position: absolute;
+	z-index: 2;
+	margin-left: 68%;
+	margin-top: 22px;
+	transform: scale(1.1,1.5);
+}
+
+.fond-gris
+{
+	background-color: #F6F6F6;
+	width: 100%;
+}
+
+.fond-footer
+{
+	background-color: #353535;
+	margin-top:-20px;
+}
+
+footer h4
+{
+	font-family: 'Shrikhand', cursive;
+	font-size: 16px;
+	font-weight: 100;
+	margin-left:8%;
+	padding-top: 5%;
+	letter-spacing: 1px;
+	color:#FFFFFF;
+}
+
+footer ul
+{
+	padding-bottom:20px;
+}
+
+/* PAGES MENU*/
+.flex-center-row
+{
+	display: flex;
+	align-items: center;
+}
+
+.icone-flèche
+{
+	position: absolute;
+	font-size: 25px;
+}
+
+.img-header img
+{
+	height: 400px;
+	width: 100%;
+}
+
+.fond-gris-menu
+{
+	background-color: #F6F6F6;
+	border-radius: 70px 70px 0px 0px;
+	margin-top: -100px;
+	position: relative;
+	z-index: 2;
+}
+
+.titre-menu
+{
+	display: flex;
+}
+
+.titre-menu h1
+{
+	font-size: 28px;
+	margin-top: px;
+	font-family: 'Shrikhand', cursive;
+	margin-left: 5%;
+}
+
+.heart-grand
+{
+	position: absolute;
+	z-index: 2;
+	margin-left: 80%;
+	margin-top:40px;
+	transform: scale(1.8,2);
+}
+
+.fond-blanc-plats
+{
+	background-color: white;
+	border-radius: 20px;
+	width: 87%;
+	margin-top: 20px;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+	padding: 10px;
+	margin-top: 25px;
+}
+
+.description-menu
+{
+	display: flex;
+	margin-left: 4%;
+}
+
+.text
+{
+	flex-direction: column;
+	line-height: 4px;
+}
+
+.text p
+{
+	font-weight: 400;
+	color: #353535;
+}
+
+.text h3
+{
+	color:black;
+}
+
+.prix p
+{
+	color: #353535;
+	position:absolute;
+	margin-left:77%;
+	margin-top: -25px;
+}
+
+.font-color-size
+{
+	color: grey;
+	font-weight: 400;
+	font-size: 20px;
+	text-transform:uppercase ;
+	margin-left: 5%;
+}
+
+.border-bottom
+{
+	width: 50px;
+	border:2px solid #99E2D0;
+	margin-left: 5%;
+	margin-top: -10px;
+}
+
+.flex-center
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.fa-circle
+{
+	color:#9356DC;
+}
+
+.number
+{
+	color: #EAEAEA;
+}
+
+.icone-circle
+{
+	margin-top: 10px;
+	margin-left: -35px;
+	margin-right: 30px;
+}
+
+.a-style
+{
+	list-style: none;
+	text-decoration: none;
+	color: #000000;
+}
+
+li, a
+{
+	text-decoration: none;
+	list-style: none;
+color:#FFFF}
