--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+:root{
+	--couleur1:#FFFFFF;
+	--couleur2:#9356DC;
+	--couleur3: #99E2D0;
+	--couleur4:#000000;
+	--couleur5:#EAEAEAEA;
+	--couleur6:#353535;
+	--couleur7:#F6F6F6F6;
+	--font-family:'Shrikhand', cursive;
+	
+	
+}
 
 body
 {
 	font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 .logo img
@@ -12,7 +26,7 @@ body
 
 .barre-recherche
 {
-	background-color: #EAEAEA;
+	background-color: var(--couleur5);
 	height: 70px;
 	width: 100%;
 	display: flex;
@@ -27,10 +41,12 @@ body
 
 input
 {
-	background: #EAEAEA;
+	background: var(--couleur5);
 	border:none;
 	font-size:16px;
 	margin-left:40%;
+	font-weight: 600;
+	color: var(--couleur4);
 }
 
 h1
@@ -40,11 +56,15 @@ h1
 
 .fond-gris-header
 {
-	background-color: #F6F6F6;
+	background-color: var(--couleur7);
 	margin: 0;
 	width: 100%;
 	margin-top: -1px;
 	text-align: center;
+	
+}
+.fond-gris-header h2{
+font-weight: 100;
 }
 
 .btn
@@ -52,296 +72,486 @@ h1
 	border-radius: 30px;
 	width: 220px;
 	height: 50px;
-	color: white;
+	color: var(--couleur1);
 	margin-top: 30px;
 	margin-bottom: 50px;
 	font-size: 15px;
-	background: linear-gradient(170deg,#FF79DA, #9356DC );
+	cursor: pointer;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	background: linear-gradient(to top,#9356DC,#FF79DA);
+	transition: transform 200ms;
 }
+
+.btn:hover
+{
+	transform: scale(1.02);
+	opacity:0.9;
+}
+
 
 .btn p
 {
-	font-weight:530;
+font-weight:530;
 }
 
 .onglet-gris
 {
-	background-color: #F5EDFF;
-	display: flex;
-	padding: 15px;
-	width:80%;
-	border-radius: 25px;
-	margin-top: 20px;
-	box-shadow: 19px 17px 34px -36px black;
+background-color: #F5EDFF;
+display: flex;
+
+padding: 15px;
+width:80%;
+border-radius: 25px;
+margin-top: 20px;
+box-shadow: 19px 17px 34px -36px var(--couleur4);
 }
 
 .icone-menu
 {
-	margin-top: 18px;
-	margin-right: 25px;
-	color: #808080;
+margin-top: 18px;
+margin-right: 25px;
+color: #808080;
 }
 
 p
 {
-	font-weight: 500;
+font-weight: 500;
 }
 
 section
 {
-	display: flex;
-	flex-direction: column;
-	margin-top:30px;
+display: flex;
+flex-direction: column;
+margin-top:30px;
 }
 
 .icone-color
 {
-	color:#9356DC;
+color:var(--couleur2);
 }
 
 h2
 {
-	margin-left: 5%;
+margin-left: 5%;
 }
 
 .onglet-carré
 {
-	border-radius: 25px;
-	width: 85%;
-	background-color:rgb(250,250,250) ;
-	border-radius: 20px;
-	box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-	margin-bottom: 25px;
+border-radius: 25px;
+width: 85%;
+background-color:var(--couleur1) ;
+border-radius: 20px;
+box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+margin-bottom: 25px;
 }
 
 article img
 {
-	object-fit: cover;
-	overflow: hidden;
-	width: 100%;
-	height: 180px;
-	border-radius: 20px 20px 0px 0px;
+object-fit: cover;
+overflow: hidden;
+width: 100%;
+height: 180px;
+border-radius: 20px 20px 0px 0px;
 }
 
 .contenu
 {
-	display:flex;
-	justify-content: space-around;
+display:flex;
+justify-content: space-around;
 }
 
 .nouveau
 {
-	position:absolute;
-	margin-left:60%;
-	background: #99E2D0;
-	padding: 12px;
-	border-radius: 4px;
-	color: #4CB49B;
-	width: 70px;
-	z-index: 2;
-	margin-right: 80px;
-	font-weight: 530;
+position:absolute;
+margin-left:60%;
+background: var(--couleur3);
+padding: 12px;
+border-radius: 4px;
+color: #4CB49B;
+width: 70px;
+z-index: 2;
+margin-right: 80px;
+font-weight: 530;
 }
 
 .description
 {
-	display: flex;
-	flex-direction: column;
-	margin-left: 5%;
-	line-height:1px;
+display: flex;
+flex-direction: column;
+margin-left: 5%;
+line-height:1px;
 }
 
 .description p
 {
-	margin-top: 5px;
-	font-weight: 400;
-	color:#353535;
+margin-top: 5px;
+font-weight: 400;
+color:var(--couleur6);
 }
 
 .description h3
 {
-	font-size: 18px;
+font-size: 18px;
 }
 
+/*coeur*/
 .fa-heart
 {
-	position: absolute;
-	z-index: 2;
-	margin-left: 68%;
-	margin-top: 22px;
-	transform: scale(1.1,1.5);
+font-size: 25px;
+position: absolute;
+z-index: 2;
+margin-left: 68%;
+margin-top: 15px;
+cursor: pointer;
+}
+
+.fas
+{
+color:transparent;
+background-image: linear-gradient(#9356DC, #FF79DA);
+background-clip: text;
+opacity: 0;
+transition: all 200ms ease-in-out;
+}
+
+.fas:hover,
+.fas:focus
+{
+opacity: 1;
 }
 
 .fond-gris
 {
-	background-color: #F6F6F6;
-	width: 100%;
+background-color: var(--couleur7);
+width: 100%;
 }
 
 .fond-footer
 {
-	background-color: #353535;
-	margin-top:-20px;
+background-color: var(--couleur6);
+margin-top:-20px;
 }
 
 footer h4
 {
-	font-family: 'Shrikhand', cursive;
-	font-size: 16px;
-	font-weight: 100;
-	margin-left:8%;
-	padding-top: 5%;
-	letter-spacing: 1px;
-	color:#FFFFFF;
+font-family: var(--font-family);
+font-size: 16px;
+font-weight: 100;
+margin-left:4%;
+padding-top: 4%;
+margin-bottom:2px;
+letter-spacing: 1px;
+color:var(--couleur1);
 }
 
 footer ul
 {
-	padding-bottom:20px;
+padding-bottom:20px;
+padding-top:-10px;
+margin-left:2%;
 }
 
 /* PAGES MENU*/
 .flex-center-row
 {
-	display: flex;
-	align-items: center;
+display: flex;
+align-items: center;
 }
 
 .icone-flèche
 {
-	position: absolute;
-	font-size: 25px;
+position: absolute;
+font-size: 25px;
 }
 
 .img-header img
 {
-	height: 400px;
-	width: 100%;
-}
+height: 400px;
+width: 100%;
 
+}
+.menus{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
 .fond-gris-menu
 {
-	background-color: #F6F6F6;
-	border-radius: 70px 70px 0px 0px;
-	margin-top: -100px;
-	position: relative;
-	z-index: 2;
+background-color: var(--couleur7);
+border-radius: 70px 70px 0px 0px;
+margin-top: -100px;
+position:relative;
+z-index: 2;
 }
 
 .titre-menu
 {
-	display: flex;
+display: flex;
 }
 
 .titre-menu h1
 {
-	font-size: 28px;
-	margin-top: px;
-	font-family: 'Shrikhand', cursive;
-	margin-left: 5%;
+font-size: 28px;
+font-family: var(--font-family);
+margin-left: 5%;
 }
 
-.heart-grand
+.fa-2x
 {
-	position: absolute;
-	z-index: 2;
-	margin-left: 80%;
-	margin-top:40px;
-	transform: scale(1.8,2);
+
+margin-left: 70%;
+margin-top:30px;
 }
+
 
 .fond-blanc-plats
 {
-	background-color: white;
-	border-radius: 20px;
-	width: 87%;
-	margin-top: 20px;
-	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-	padding: 10px;
-	margin-top: 25px;
+background-color: var(--couleur1);
+border-radius: 20px;
+width: 87%;
+height: 70px;
+margin-top: 20px;
+box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+padding: 10px;
+margin-top: 25px;
+
 }
 
 .description-menu
 {
-	display: flex;
-	margin-left: 4%;
+display: flex;
+margin-left: 4%;
+	flex-direction: column;
 }
-
 .text
 {
-	flex-direction: column;
-	line-height: 4px;
+line-height: 4px;
+overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .text p
 {
-	font-weight: 400;
-	color: #353535;
+font-weight: 400;
+color: #353535;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .text h3
 {
-	color:black;
+color:black;
+}
+.prix{
+	display: flex;
+	margin-left: 50%;
+	
+	
+	color: var(--couleur4);
+	max-width: 200px;
+	max-height: 200px;
+}
+.ligne-2{
+	display: flex;
+	color: black;
 }
 
-.prix p
-{
-	color: #353535;
-	position:absolute;
-	margin-left:77%;
-	margin-top: -25px;
-}
+
 
 .font-color-size
 {
-	color: grey;
-	font-weight: 400;
-	font-size: 20px;
-	text-transform:uppercase ;
-	margin-left: 5%;
+color: var(--couleur6);
+font-weight: 400;
+font-size: 20px;
+text-transform:uppercase ;
+margin-left: 5%;
 }
 
 .border-bottom
 {
-	width: 50px;
-	border:2px solid #99E2D0;
-	margin-left: 5%;
-	margin-top: -10px;
+width: 50px;
+border:2px solid var(--couleur3);
+margin-left: 5%;
+margin-top: -10px;
 }
 
 .flex-center
 {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 .fa-circle
 {
-	color:#9356DC;
+color:var(--couleur2);
 }
 
 .number
 {
-	color: #EAEAEA;
+color: var(--couleur5);
 }
 
 .icone-circle
 {
-	margin-top: 10px;
-	margin-left: -35px;
-	margin-right: 30px;
+margin-top: 10px;
+margin-left: -35px;
+margin-right: 30px;
 }
 
 .a-style
 {
-	list-style: none;
-	text-decoration: none;
-	color: #000000;
+list-style: none;
+text-decoration: none;
+color: var(--couleur4);
 }
 
 li, a
 {
-	text-decoration: none;
-	list-style: none;
-color:#FFFF}
+text-decoration: none;
+list-style: none;
+color:var(--couleur1)}
+
+/*effets menu*/
+.fond-blanc-plats
+{
+animation-duration: 3s;
+animation-name: slidein;
+transition-delay: transform 400ms;
+}
+
+@keyframes slidein
+{
+from
+{
+	opacity:0;
+	margin-bottom: 50%;
+}
+
+to
+{
+	opacity: 1;
+	margin-left: 0%;
+}
+}
+
+/*loading spinner*/
+.loading
+{
+display: flex;
+flex-direction: column;
+justify-content: center;
+background: var(--couleur1);
+width: 100%;
+height: 50%;
+position:absolute;
+
+animation-fill-mode: forwards;
+animation: opacity 4s both;
+display: flex;
+align-items: center;
+}
+
+@keyframes opacity
+{
+	50%{
+		opacity:0.8
+	}
+	90%{
+		opacity: 0.4;
+	}
+99.99%
+{
+	opacity: 0.2;
+}
+
+100%
+{
+	opacity: 0;
+	z-index: -1;	
+}
+}
+
+.loading-anim
+{
+content:"";
+width: 50px;
+height: 50px;
+border:10px solid var(--couleur5);
+
+border-top-color:var(--couleur3);
+border-right-color: #FF79DA;
+border-bottom-color:var(--couleur1);
+border-left-color: var(--couleur5);
+border-radius: 50%;
+z-index: -2;
+animation: loading 3s linear infinite;
+}
+
+@keyframes loading
+{
+100%
+{
+	transform: rotate(360deg);
+	z-index: 2;
+}
+}
+
+/*effet check*/
+
+.animation-check{
+	width: 18%;
+	height: 92px;
+	border-radius:0px 20px 20px 0px; 
+	position: absolute;
+	margin-left: 68%;
+	margin-top: -75px;
+	size:20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+.animation-check::before{
+content: "";
+top:0;
+left:0;
+bottom:0;
+right: 0;
+position:absolute;
+background: var(--couleur3);
+border-radius: 0px 20px 20px 0px;
+transform: scaleX(0);
+transform-origin: right;
+transition: transform 500ms ease-in-out;
+overflow-x: hidden;
+
+}
+
+.animation-check:hover::before
+
+{
+	transform:scaleX(1);
+
+}
+
+.fa-circle-check{
+	font-size:40px;
+	opacity: 0;
+}
+
+.fa-circle-check:hover{
+transform: rotate(360deg);
+transition: transform 300ms linear;
+opacity: 1;
+}
+
+.flex-row{
+	display: flex;
+	justify-items:space-between;
+}
+.prix-test{
+	justify-content: flex-end;
+}
