--- a/style.css
+++ b/style.css
@@ -17,14 +17,18 @@ body
 	margin: 0;
 	padding: 0;
 }
-
-.logo img
-{
-	width: 150px;
-	margin-bottom: 10px;
+.nav{
+	box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
-.barre-recherche
+	.nav__logo img{
+		width: 150px;
+		margin-bottom: 10px;
+		display: flex;
+		justify-content: center;
+	}
+
+.nav__recherche
 {
 	background-color: var(--couleur5);
 	height: 70px;
@@ -49,12 +53,14 @@ input
 	color: var(--couleur4);
 }
 
-h1
+.header__title h1
 {
 	margin-top: 30px;
 }
-
-.fond-gris-header
+.header__title h2{
+	font-weight: 100;
+	}
+.header__fond
 {
 	background-color: var(--couleur7);
 	margin: 0;
@@ -63,9 +69,7 @@ h1
 	text-align: center;
 	
 }
-.fond-gris-header h2{
-font-weight: 100;
-}
+
 
 .btn
 {
@@ -77,7 +81,7 @@ font-weight: 100;
 	margin-bottom: 50px;
 	font-size: 15px;
 	cursor: pointer;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	background: linear-gradient(to top,#9356DC,#FF79DA);
 	transition: transform 200ms;
 }
@@ -135,7 +139,7 @@ h2
 margin-left: 5%;
 }
 
-.onglet-carré
+.card
 {
 border-radius: 25px;
 width: 85%;
@@ -145,7 +149,7 @@ box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 
 margin-bottom: 25px;
 }
 
-article img
+.card__img img
 {
 object-fit: cover;
 overflow: hidden;
@@ -160,7 +164,7 @@ display:flex;
 justify-content: space-around;
 }
 
-.nouveau
+.card__nouveau
 {
 position:absolute;
 margin-left:60%;
@@ -174,7 +178,7 @@ margin-right: 80px;
 font-weight: 530;
 }
 
-.description
+.card__description
 {
 display: flex;
 flex-direction: column;
@@ -182,14 +186,14 @@ margin-left: 5%;
 line-height:1px;
 }
 
-.description p
+.card__description p
 {
 margin-top: 5px;
 font-weight: 400;
 color:var(--couleur6);
 }
 
-.description h3
+.card__description h3
 {
 font-size: 18px;
 }
@@ -218,170 +222,6 @@ transition: all 200ms ease-in-out;
 .fas:focus
 {
 opacity: 1;
-}
-
-.fond-gris
-{
-background-color: var(--couleur7);
-width: 100%;
-}
-
-.fond-footer
-{
-background-color: var(--couleur6);
-margin-top:-20px;
-}
-
-footer h4
-{
-font-family: var(--font-family);
-font-size: 16px;
-font-weight: 100;
-margin-left:4%;
-padding-top: 4%;
-margin-bottom:2px;
-letter-spacing: 1px;
-color:var(--couleur1);
-}
-
-footer ul
-{
-padding-bottom:20px;
-padding-top:-10px;
-margin-left:2%;
-}
-
-/* PAGES MENU*/
-.flex-center-row
-{
-display: flex;
-align-items: center;
-}
-
-.icone-flèche
-{
-position: absolute;
-font-size: 25px;
-}
-
-.img-header img
-{
-height: 400px;
-width: 100%;
-
-}
-.menus{
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-.fond-gris-menu
-{
-background-color: var(--couleur7);
-border-radius: 70px 70px 0px 0px;
-margin-top: -100px;
-position:relative;
-z-index: 2;
-}
-
-.titre-menu
-{
-display: flex;
-}
-
-.titre-menu h1
-{
-font-size: 28px;
-font-family: var(--font-family);
-margin-left: 5%;
-}
-
-.fa-2x
-{
-
-margin-left: 70%;
-margin-top:30px;
-}
-
-
-.fond-blanc-plats
-{
-background-color: var(--couleur1);
-border-radius: 20px;
-width: 87%;
-height: 70px;
-margin-top: 20px;
-box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-padding: 10px;
-margin-top: 25px;
-
-}
-
-.description-menu
-{
-display: flex;
-margin-left: 4%;
-	flex-direction: column;
-}
-.text
-{
-line-height: 4px;
-overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-.text p
-{
-font-weight: 400;
-color: #353535;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-.text h3
-{
-color:black;
-}
-.prix{
-	display: flex;
-	margin-left: 50%;
-	
-	
-	color: var(--couleur4);
-	max-width: 200px;
-	max-height: 200px;
-}
-.ligne-2{
-	display: flex;
-	color: black;
-}
-
-
-
-.font-color-size
-{
-color: var(--couleur6);
-font-weight: 400;
-font-size: 20px;
-text-transform:uppercase ;
-margin-left: 5%;
-}
-
-.border-bottom
-{
-width: 50px;
-border:2px solid var(--couleur3);
-margin-left: 5%;
-margin-top: -10px;
-}
-
-.flex-center
-{
-display: flex;
-flex-direction: column;
-align-items: center;
 }
 
 .fa-circle
@@ -413,145 +253,24 @@ li, a
 text-decoration: none;
 list-style: none;
 color:var(--couleur1)}
-
-/*effets menu*/
-.fond-blanc-plats
+.font-color-size
 {
-animation-duration: 3s;
-animation-name: slidein;
-transition-delay: transform 400ms;
+color: var(--couleur6);
+font-weight: 400;
+font-size: 20px;
+text-transform:uppercase ;
+margin-left: 5%;
 }
 
-@keyframes slidein
+.border-bottom
 {
-from
-{
-	opacity:0;
-	margin-bottom: 50%;
-}
-
-to
-{
-	opacity: 1;
-	margin-left: 0%;
-}
-}
-
-/*loading spinner*/
-.loading
+width: 50px;
+border:2px solid var(--couleur3);
+margin-left: 5%;
+margin-top: -10px;
+}.flex-center
 {
 display: flex;
 flex-direction: column;
-justify-content: center;
-background: var(--couleur1);
-width: 100%;
-height: 50%;
-position:absolute;
-
-animation-fill-mode: forwards;
-animation: opacity 4s both;
-display: flex;
 align-items: center;
-}
-
-@keyframes opacity
-{
-	50%{
-		opacity:0.8
-	}
-	90%{
-		opacity: 0.4;
-	}
-99.99%
-{
-	opacity: 0.2;
-}
-
-100%
-{
-	opacity: 0;
-	z-index: -1;	
-}
-}
-
-.loading-anim
-{
-content:"";
-width: 50px;
-height: 50px;
-border:10px solid var(--couleur5);
-
-border-top-color:var(--couleur3);
-border-right-color: #FF79DA;
-border-bottom-color:var(--couleur1);
-border-left-color: var(--couleur5);
-border-radius: 50%;
-z-index: -2;
-animation: loading 3s linear infinite;
-}
-
-@keyframes loading
-{
-100%
-{
-	transform: rotate(360deg);
-	z-index: 2;
-}
-}
-
-/*effet check*/
-
-.animation-check{
-	width: 18%;
-	height: 92px;
-	border-radius:0px 20px 20px 0px; 
-	position: absolute;
-	margin-left: 68%;
-	margin-top: -75px;
-	size:20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-}
-.animation-check::before{
-content: "";
-top:0;
-left:0;
-bottom:0;
-right: 0;
-position:absolute;
-background: var(--couleur3);
-border-radius: 0px 20px 20px 0px;
-transform: scaleX(0);
-transform-origin: right;
-transition: transform 500ms ease-in-out;
-overflow-x: hidden;
-
-}
-
-.animation-check:hover::before
-
-{
-	transform:scaleX(1);
-
-}
-
-.fa-circle-check{
-	font-size:40px;
-	opacity: 0;
-}
-
-.fa-circle-check:hover{
-transform: rotate(360deg);
-transition: transform 300ms linear;
-opacity: 1;
-}
-
-.flex-row{
-	display: flex;
-	justify-items:space-between;
-}
-.prix-test{
-	justify-content: flex-end;
 }
