--- a/loading_spinner.css
+++ b/loading_spinner.css
@@ -1,60 +1,71 @@
+
 .loading
 {
-display: flex;
-flex-direction: column;
-justify-content: center;
-background: var(--couleur1);
-width: 100%;
-height: 50%;
-position:absolute;
-
-animation-fill-mode: forwards;
-animation: opacity 4s both;
-display: flex;
-align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background: var(--couleur1);
+	width: 100%;
+	height: 50%;
+	position:absolute;
+	animation-fill-mode: forwards;
+	animation: opacity 4s both;
+	display: flex;
+	align-items: center;
 }
 
 @keyframes opacity
 {
-	50%{
-		opacity:0.8
-	}
-	90%{
+	50%
+	{
+	opacity:0.8}
+
+	90%
+	{
 		opacity: 0.4;
 	}
-99.99%
-{
-	opacity: 0.2;
-}
 
-100%
-{
-	opacity: 0;
-	z-index: -1;	
-}
+	99.99%
+	{
+		opacity: 0.2;
+	}
+
+	100%
+	{
+		opacity: 0;
+		z-index: -1;
+	}
 }
 
 .loading-anim
 {
-content:"";
-width: 50px;
-height: 50px;
-border:10px solid var(--couleur5);
-
-border-top-color:var(--couleur3);
-border-right-color: #FF79DA;
-border-bottom-color:var(--couleur1);
-border-left-color: var(--couleur5);
-border-radius: 50%;
-z-index: -2;
-animation: loading 3s linear infinite;
+	content:"";
+	width: 50px;
+	height: 50px;
+	border:10px solid var(--couleur5);
+	border-top-color:var(--tertiaire);
+	border-right-color:var(--secondaire);
+	border-bottom-color:var(--couleur1);
+	border-left-color:var(--primaire);
+	border-radius: 50%;
+	z-index: -2;
+	animation: loading 3s linear infinite;
 }
 
 @keyframes loading
 {
-100%
-{
-	transform: rotate(360deg);
-	z-index: 2;
+	100%
+	{
+		transform: rotate(360deg);
+		z-index: 2;
+	}
 }
+
+/*DESKTOP*/
+@media screen and (min-width:990px)
+{
+	.loading
+	{
+		height: 100%;
+	}
 }
