--- a/menus.css
+++ b/menus.css
@@ -1,208 +1,137 @@
+
 .flex-center-row
 {
-display: flex;
-align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .icone-flèche
 {
-font-size: 30px;
-color: black;
+	font-size: 30px;
+	color: black;
 	margin-top:5px;
 	position: absolute;
-	
+	margin-left:10px;
 }
 
 .header__img img
 {
-height: 400px;
-width: 100%;
-
+	height: 400px;
+	width: 100%;
+	object-fit: cover;
 }
-.menus{
+
+.menus
+{
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 }
+
 .menu__fond
 {
-background-color: var(--couleur7);
-border-radius: 70px 70px 0px 0px;
-margin-top: -100px;
-position:relative;
-z-index: 2;
+	background-color:#f6f6f6;
+	border-radius: 80px 80px 0px 0px;
+	margin-top: -100px;
+	position:relative;
+	z-index: 2;
 }
 
 .menu__titre
 {
-display: flex;
-justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .menu__titre h1
 {
-font-size: 28px;
-font-family: var(--font-family);
-margin-left: 5%;
+	font-size: 28px;
+	font-family: var(--font-family);
+	margin-left: 5%;
 }
-.fa-2x{
+
+.fa-2x
+{
 	position: absolute;
 	padding-left:7%;
 	padding-top: 5px;
-	
 }
-
-
 
 .plats__fond
 {
-background-color: var(--couleur1);
-border-radius: 20px;
-width: 90%;
-height: 70px;
-margin-top: 20px;
-box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-padding: 10px;
-margin-top: 25px;
+	background-color:#fff;
+	border-radius: 20px;
+	width: 90%;
+	height: 70px;
+	margin-top: 20px;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+	padding: 10px;
+	margin-top: 25px;
 	overflow: hidden;
-
 }
-.plats__description{
-	color: black;
 
-	margin-top:-30px;
-}
 .plats__description
 {
-display: flex;
-margin-left: 4%;
-flex-direction: column;
-	
-   
+	color: black;
+	margin-top:-30px;
+}
+
+.plats__description
+{
+	display: flex;
+	margin-left: 4%;
+	flex-direction: column;
 }
 
 .plats__text p
 {
-font-weight: 400;
-color: #353535;
-overflow: hidden;
+	font-weight: 400;
+	color: #353535;
+	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
 
 .plats__text h3
 {
-color:black;
-padding-top: 8px;
-overflow: hidden;
+	color:black;
+	padding-top: 8px;
+	overflow: hidden;
 	text-overflow: ellipsis;
-	white-space: nowrap;	
+	white-space: nowrap;
 }
-.plats__prix{
+
+.plats__prix
+{
 	margin-left: auto;
 	padding-left: 50px;
-	 font-weight: bold;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding-left: 0.5rem;
-	 margin-top: -55px;
-}
-.plats__prix p{
-	font-weight: bolder;
-	
-}
-
-.plats__check{
-	width: 90px;
-
-	background-color:#99E2D0; 
-	height: 100%;
-  
-	
-	border-radius:0px 20px 20px 0px;
+	font-weight: bold;
 	display: flex;
-	align-items: center;
-	align-content: center;
-	justify-content: center;
-    margin-right: -100px;
-	transition: margin-right 1500ms ease-in-out;
-	transition-duration: 0.5s;
-}
-.plats__fond:hover .plats__check{
-	margin-right:-10px;
-	
+	justify-content: flex-end;
+	align-items: flex-end;
+	padding-left: 0.5rem;
+	margin-top: -55px;
 }
 
-.espace{
+.plats__prix p
+{
+	font-weight: bolder;
+}
+
+.espace
+{
 	width: 50px;
 }
 
-.ligne-2{
+.ligne-2
+{
 	display: flex;
 	margin-top: -5px;
 }
 
-
-
 .flex-center
 {
-display: flex;
-flex-direction: column;
-align-items: center;
-}
-
-
-
-/*effets menu*/
-article
-{
-animation-duration: 3s;
-animation-name: slidein;
-transition-delay: transform 400ms;
-}
-
-@keyframes slidein
-{
-from
-{
-	opacity:0;
-	margin-bottom: 50%;
-}
-
-to
-{
-	opacity: 1;
-	margin-left: 0%;
-}
-}
-
-
-
-
-/*effet check*/
-
-
-
-
-.fa-circle-check{
-	font-size:40px;
-	transition: transform 1500ms linear;
-transition-duration: 0.5s;
-}
-
-.plats__fond:hover .fa-circle-check{
-transform: rotate(360deg);
-
-}
-
-.flex-row{
 	display: flex;
-	justify-items:space-between;
-}
-.prix-test{
-	justify-content: flex-end;
-}
-.text-p{
-	
+	flex-direction: column;
+	align-items: center;
 }
