--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
-:root{
-	--couleur1:#FFFFFF;
-	--couleur2:#9356DC;
-	--couleur3: #99E2D0;
-	--couleur4:#000000;
-	--couleur5:#EAEAEAEA;
-	--couleur6:#353535;
-	--couleur7:#F6F6F6F6;
+
+:root
+{
+
+	--primaire:#9356DC;
+	--secondaire:#FF79DA;
+	--tertiaire: #99E2D0;
 	--font-family:'Shrikhand', cursive;
-	
-	
 }
 
 body
@@ -17,69 +14,35 @@ body
 	margin: 0;
 	padding: 0;
 }
-.nav{
-	box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
-}
-
-	.nav__logo img{
-		width: 150px;
-		margin-bottom: 10px;
-		display: flex;
-		justify-content: center;
-	}
-
-.nav__recherche
-{
-	background-color: var(--couleur5);
-	height: 70px;
-	width: 100%;
-	display: flex;
-	align-items: center;
-}
-
-.icone-map
-{
-	position: absolute;
-	margin-left: 35%;
-}
-
-input
-{
-	background: var(--couleur5);
-	border:none;
-	font-size:16px;
-	margin-left:40%;
-	font-weight: 600;
-	color: var(--couleur4);
-}
 
 .header__title h1
 {
 	margin-top: 30px;
 }
-.header__title h2{
+
+.header__title h2
+{
 	font-weight: 100;
-	}
+}
+
 .header__fond
 {
-	background-color: var(--couleur7);
+	background-color: #F6F6F6F6;
 	margin: 0;
 	width: 100%;
 	margin-top: -1px;
 	text-align: center;
-	
 }
-
 
 .btn
 {
 	border-radius: 30px;
 	width: 220px;
 	height: 50px;
-	color: var(--couleur1);
+	color: #FFFFFF;
 	margin-top: 30px;
 	margin-bottom: 50px;
-	font-size: 15px;
+	font-size: 18px;
 	cursor: pointer;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	background: linear-gradient(to top,#9356DC,#FF79DA);
@@ -92,185 +55,192 @@ input
 	opacity:0.9;
 }
 
-
 .btn p
 {
-font-weight:530;
+	font-weight:530;
 }
 
 .onglet-gris
 {
-background-color: #F5EDFF;
-display: flex;
-
-padding: 15px;
-width:80%;
-border-radius: 25px;
-margin-top: 20px;
-box-shadow: 19px 17px 34px -36px var(--couleur4);
+	background-color: #F5EDFF;
+	display: flex;
+	padding: 15px;
+	width:80%;
+	border-radius: 25px;
+	margin-top: 20px;
+	box-shadow: 19px 17px 34px -36px #000000;
 }
 
 .icone-menu
 {
-margin-top: 18px;
-margin-right: 25px;
-color: #808080;
+	margin-top: 18px;
+	margin-right: 25px;
+	color: #808080;
 }
 
 p
 {
-font-weight: 500;
+	font-weight: 500;
 }
 
 section
 {
-display: flex;
-flex-direction: column;
-margin-top:30px;
+	display: flex;
+	flex-direction: column;
+	margin-top:30px;
 }
 
-.icone-color
-{
-color:var(--couleur2);
+.fa-store,
+.fa-list-ul,
+.fa-mobile-screen-button{
+	color: var(--primaire);
 }
 
 h2
 {
-margin-left: 5%;
+	margin-left: 5%;
 }
 
 .card
 {
-border-radius: 25px;
-width: 85%;
-background-color:var(--couleur1) ;
-border-radius: 20px;
-box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-margin-bottom: 25px;
+	border-radius: 25px;
+	width: 85%;
+	background-color:#FFFFFF;
+	border-radius: 20px;
+	box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+	margin-bottom: 25px;
 }
 
 .card__img img
 {
-object-fit: cover;
-overflow: hidden;
-width: 100%;
-height: 180px;
-border-radius: 20px 20px 0px 0px;
+	object-fit: cover;
+	overflow: hidden;
+	width: 100%;
+	height: 180px;
+	border-radius: 20px 20px 0px 0px;
 }
 
 .contenu
 {
-display:flex;
-justify-content: space-around;
+	display:flex;
+	justify-content: space-around;
 }
 
 .card__nouveau
 {
-position:absolute;
-margin-left:60%;
-background: var(--couleur3);
-padding: 12px;
-border-radius: 4px;
-color: #4CB49B;
-width: 70px;
-z-index: 2;
-margin-right: 80px;
-font-weight: 530;
+	position:absolute;
+	margin-left:60%;
+	background: var(--tertiaire);
+	padding: 12px;
+	border-radius: 4px;
+	color:#378571 ;
+	width: 70px;
+	z-index: 2;
+	margin-right: 80px;
+	font-weight: 530;
 }
 
 .card__description
 {
-display: flex;
-flex-direction: column;
-margin-left: 5%;
-line-height:1px;
+	display: flex;
+	flex-direction: column;
+	margin-left: 5%;
+	line-height:1px;
 }
 
 .card__description p
 {
-margin-top: 5px;
-font-weight: 400;
-color:var(--couleur6);
+	margin-top: 5px;
+	font-weight: 400;
+	color:#353535;
 }
 
 .card__description h3
 {
-font-size: 18px;
+	font-size: 18px;
 }
 
 /*coeur*/
 .fa-heart
 {
-font-size: 25px;
-position: absolute;
-z-index: 2;
-margin-left: 68%;
-margin-top: 15px;
-cursor: pointer;
+	font-size: 25px;
+	position: absolute;
+	z-index: 2;
+	margin-left: 68%;
+	margin-top: 15px;
+	cursor: pointer;
 }
 
 .fas
 {
-color:transparent;
-background-image: linear-gradient(#9356DC, #FF79DA);
-background-clip: text;
-opacity: 0;
-transition: all 200ms ease-in-out;
+	color:transparent;
+	background-image:-webkit-linear-gradient(#9356DC, #FF79DA);
+	background-image: linear-gradient(#9356DC, #FF79DA);
+	overflow: hidden;
+	background-clip:text;
+	-webkit-background-clip: text;
+	opacity: 0;
+	-webkit-transition:all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
 }
 
-.fas:hover,
-.fas:focus
+.fas:hover,.fas:focus
 {
-opacity: 1;
+	opacity: 1;
+	overflow: hidden;
 }
 
 .fa-circle
 {
-color:var(--couleur2);
+	color:var(--primaire);
 }
 
 .number
 {
-color: var(--couleur5);
+	color:#EAEAEAEA;
 }
 
 .icone-circle
 {
-margin-top: 10px;
-margin-left: -35px;
-margin-right: 30px;
+	margin-top: 10px;
+	margin-left: -35px;
+	margin-right: 30px;
 }
 
 .a-style
 {
-list-style: none;
-text-decoration: none;
-color: var(--couleur4);
+	list-style: none;
+	text-decoration: none;
+	color:#000000;
 }
 
 li, a
 {
-text-decoration: none;
-list-style: none;
-color:var(--couleur1)}
+	text-decoration: none;
+	list-style: none;
+	color:#FFFFFF;
+}
+
 .font-color-size
 {
-color: var(--couleur6);
-font-weight: 400;
-font-size: 20px;
-text-transform:uppercase ;
-margin-left: 5%;
+	color:#353535;
+	font-weight: 400;
+	font-size: 20px;
+	text-transform:uppercase ;
+	margin-left: 5%;
 }
 
 .border-bottom
 {
-width: 50px;
-border:2px solid var(--couleur3);
-margin-left: 5%;
-margin-top: -10px;
-}.flex-center
+	width: 50px;
+	border:2px solid var(--tertiaire);
+	margin-left: 5%;
+	margin-top: -10px;
+}
+
+.flex-center
 {
-display: flex;
-flex-direction: column;
-align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
