--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body
 {
 	transform: scale(1.02);
 	opacity:0.9;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .btn p
