--- a/menus.css
+++ b/menus.css
@@ -31,7 +31,7 @@
 .menu__fond
 {
 	background-color:#f6f6f6;
-	border-radius: 80px 80px 0px 0px;
+	border-radius: 30px 30px 0px 0px;
 	margin-top: -100px;
 	position:relative;
 	z-index: 2;
@@ -61,8 +61,8 @@
 {
 	background-color:#fff;
 	border-radius: 20px;
-	width: 90%;
-	height: 70px;
+	width: 80%;
+	height: 50px;
 	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 	padding: 10px;
@@ -78,9 +78,9 @@
 
 .plats__description
 {
-	display: flex;
+	
 	margin-left: 4%;
-	flex-direction: column;
+	
 }
 
 .plats__text p
@@ -100,7 +100,25 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+h3{
+	overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+}
+.plats__fond:hover h3{
+width: 200px;	
+}
 
+.espace1:hover{
+	margin-left: -50px;
+	width: 100px;
+}
+
+.titre_plats h3{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 .plats__prix
 {
 	margin-left: auto;
@@ -116,6 +134,7 @@
 .plats__prix p
 {
 	font-weight: bolder;
+
 }
 
 .espace
@@ -126,7 +145,7 @@
 .ligne-2
 {
 	display: flex;
-	margin-top: -5px;
+	margin-top: -28px;
 }
 
 .flex-center
